--- a/index.html
+++ b/index.html
@@ -14,4 +14,13 @@
   <frame src="" name="topFrame" scrolling="No" noresize="noresize" id="topFrame" title="topFrame" />
   <frame src="https://www.a-foto.net/host/smp/index.asp" name="main" id="mainFrame" title="mainFrame" />
 </frameset>
+  <noframes><body>
+			Samarco Pictures - Motion pictures - Photography<br />
+			Learn with us how to value your image for free or for cheap<br />
+			Increase your skills - volounteer - for you or for friends
+			<p>Our partners:</p>
+			<p><a href="https://www.a-foto.net">Artigiana Foto</a> since 1968<br>
+				<a href="https://www.a-foto.net/pro/">Artigiana Foto</a> professional<br>
+				<a href="http://www.movelink.biz">Movelink</a> - our friends around the Venices (de citra et de ultra)</p>
+		</body></noframes>
 </html>
