--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <noframes><body>
 			Samarco Pictures - Motion pictures - Photography<br />
 			Learn with us how to value your image for free or for cheap<br />
-			Increase your skills - volounteer - for you or for friends
+			Increase your skills - volounteer - for you or for friends<br />
+	                <a href="https://www.a-foto.net/host/smp/widescreen.asp?Flag=spcontact">Contact</a>
 			<p>Our partners:</p>
 			<p><a href="https://www.a-foto.net">Artigiana Foto</a> since 1968<br>
 				<a href="https://www.a-foto.net/pro/">Artigiana Foto</a> professional<br>
